src/objects/SOFA_JobItem__c.object
<CustomObject>
    <fields>
        <fullName>CountStart__c</fullName>
        <label>Count Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CountStop__c</fullName>
        <label>Count Stop</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>FieldAPIName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFormula__c</fullName>
        <label>FieldFormula</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldIsCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldIsCalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldIsCreatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldIsCreatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldIsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldIsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldIsFilterable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldIsFilterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldIsUpdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldIsUpdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldLength__c</fullName>
        <label>FieldLength</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobErrors__c</fullName>
        <label>Job Errors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobItemsTotal__c</fullName>
        <label>Job Items Total</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobItems__c</fullName>
        <label>Job Items</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>Job Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>ObjectAPIName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOFA_JobId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOFA JobId</label>
        <referenceTo>SOFA_Job__c</referenceTo>
        <relationshipLabel>SOFA Job Items</relationshipLabel>
        <relationshipName>SOFA_Job_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SOFA Job Item</label>
    <nameField>
        <label>SOFA Job Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOFA Job Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>